--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Jekyll v3.8.6">
-  <title>Yama</title>
+  <title>{{ blog.title }}</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -52,44 +52,28 @@
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link" href="http://twitter.com/justafansoffkk">Twitter</a>
           <a class="nav-item nav-link" href="#">About</a>
-          <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
+          <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
         </div>
       </div>
     </nav>
   </header>
 
   <main role="main">
+    <div class="container">
 
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1>Hello!</h1>
-        <p class="lead text-muted">Hey this is a blog where you create your imagination.</p>
-        <p>
-          <a href="mailto:tomozoushanxia9@gmail.com" class="btn btn-primary my-2">Email Me</a>
-        </p>
-        <img src="{% static 'download-8.jpg' %}" height= "300"/>
-      </div>
-    </section>
+    <h1 class="text-center pt-3">{{ blog.title }}</h1>
+    <br>
+    <br>
+    <hr />
 
-    <div class="album py-5 bg-light">
-      <div class="container">
+    <img class="img-fluid" src="{{ blog.image.url }}" />
+    <br />
+    <br />
+    <br />
 
-        <div class="row">
 
-          {% for job in jobs.all %}
-          <div class="col-md-4">
-            <div class="card mb-4 shadow-sm">
-              <img class="card-img-top" src="{{ job.image.url }}" />
-              <div class="card-body">
-                <p class="card-text">{{ job.summary }}</p>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
 
+  </div>
   </main>
 
   <footer class="text-muted">
