summernote is running

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,6 +1,6 @@
-
 <!doctype html>
-<html lang="en">
+{% extends 'blog/base.html' %}
+<html lang="ja">
 <head>
   {% load staticfiles %}
 
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Jekyll v3.8.6">
-  <title>Yama</title>
+  <title>Yamashita</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -33,7 +33,6 @@
       -ms-user-select: none;
       user-select: none;
     }
-
     @media (min-width: 768px) {
       .bd-placeholder-img-lg {
         font-size: 3.5rem;
@@ -44,13 +43,13 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'home' %}">Yama</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Yamashita</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link" href="http://twitter.com/justafansoffkk">Twitter</a>
+          <a class="nav-item nav-link" href="http://twitter.com/justafanoffkk">Twitter</a>
           <a class="nav-item nav-link" href="#">About</a>
           <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
         </div>
@@ -61,19 +60,39 @@
   <main role="main">
     <div class="container">
 
-    <h1 class="text-center pt-3">Welcome to my Blog</h1>
-    <br>
-    <br>
-    <h2>Latest Post</h2>
-    <hr />
 
-    {% for blog in blogs.all %}
-    <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
-    <img class="img-fluid" src="{{ blog.image.url }}" />
-    <br />
-    <br />
-    <br />
-    {% endfor %}
+
+
+
+
+      {% block content %}
+      <br />
+      <br />
+      <h1>FKKブログ</h1><br>
+      <hr />
+      {% for blog in blogs.all %}
+      <ul>
+      <li>
+
+      <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+      <img class="img-fluid" src="{{ blog.image.url }}" />
+      <br />
+      <br />
+      </li>
+      </ul>
+      {% endfor %}
+      {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -82,7 +101,7 @@
 
   <footer class="text-muted">
     <div class="container text-center">
-      <p>©︎Yama {% now "Y" %} </p>
+      <p>©︎Yamashita {% now "Y" %} </p>
       </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
