--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -44,13 +44,13 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'home' %}">Yama</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Yamashita</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link" href="http://twitter.com/justafansoffkk">Twitter</a>
+          <a class="nav-item nav-link" href="http://twitter.com/justafanoffkk">Twitter</a>
           <a class="nav-item nav-link" href="#">About</a>
           <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
         </div>
@@ -62,12 +62,12 @@
 
     <section class="jumbotron text-center">
       <div class="container">
-        <h1>Hello!</h1>
-        <p class="lead text-muted">Hey this is a blog where you create your imagination.</p>
+        <h1>ボクのFKK</h1>
+        <p class="lead text-muted">彼女はルーマニアのクレア。おすすめはOase。FKKでのちょっと変わった体験を綴ります。</p>
         <p>
           <a href="mailto:tomozoushanxia9@gmail.com" class="btn btn-primary my-2">Email Me</a>
         </p>
-        <img src="{% static 'download-8.jpg' %}" height= "300"/>
+        <img src="{% static 'aaa.jpg' %}" height= "300"/>
       </div>
     </section>
 
@@ -94,7 +94,7 @@
 
   <footer class="text-muted">
     <div class="container text-center">
-      <p>©︎Yama {% now "Y" %} </p>
+      <p>©︎Yamashita {% now "Y" %} </p>
       </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
