--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -42,7 +42,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'home' %}">Yama</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Yamashita</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -76,20 +76,7 @@
       {{ blog_body.body | safe }}<hr /></br>
       <br />
 
-
-
       {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
 
 
 
