--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -46,7 +46,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'home' %}">Yama</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Yamashita</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
