--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 <head>
   {% load staticfiles %}
 
@@ -67,7 +67,7 @@
         <p>
           <a href="mailto:tomozoushanxia9@gmail.com" class="btn btn-primary my-2">Email Me</a>
         </p>
-        <img src="{% static 'aaa.jpg' %}" height= "300"/>
+        <!-- <img src="{% static '' %}" height= "300"/> -->
       </div>
     </section>
 
